@@ -1,0 +1,30 @@
+PREFIX dcterms: <http://purl.org/dc/terms/> 
+PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#> 
+PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> 
+PREFIX dc: <http://purl.org/dc/elements/1.1/> 
+PREFIX sdmx-measure: <http://purl.org/linked-data/sdmx/2009/measure#> 
+PREFIX qb: <http://purl.org/linked-data/cube#> 
+PREFIX xkos: <http://purl.org/linked-data/xkos#> 
+PREFIX owl: <http://www.w3.org/2002/07/owl#> 
+PREFIX skos: <http://www.w3.org/2004/02/skos/core#> 
+SELECT 
+?CATALOG_NAME ?SCHEMA_NAME ?CUBE_NAME ?DIMENSION_UNIQUE_NAME ?HIERARCHY_UNIQUE_NAME ?LEVEL_UNIQUE_NAME ?LEVEL_NUMBER ?MEMBER_UNIQUE_NAME ?MEMBER_NAME ?MEMBER_CAPTION ?MEMBER_TYPE ?PARENT_UNIQUE_NAME ?PARENT_LEVEL 
+{{{STANDARDFROM}}} 
+WHERE { 
+?CUBE_NAME qb:structure ?dsd. 
+?dsd qb:component ?compSpec. 
+?compSpec qb:measure ?MEMBER_UNIQUE_NAME.  
+OPTIONAL {?MEMBER_UNIQUE_NAME rdfs:label ?MEMBER_CAPTION FILTER ( lang(?MEMBER_CAPTION) = "en" ) } 
+BIND('{{{TABLE_CAT}}}' as ?CATALOG_NAME). 
+BIND('{{{TABLE_SCHEM}}}' as ?SCHEMA_NAME). 
+BIND('Measures' as ?DIMENSION_UNIQUE_NAME). 
+BIND('Measures' as ?HIERARCHY_UNIQUE_NAME). 
+BIND('Measures' as ?LEVEL_UNIQUE_NAME). 
+BIND(?MEMBER_UNIQUE_NAME as ?MEMBER_NAME). 
+BIND('0' as ?LEVEL_NUMBER). 
+BIND('3' as ?MEMBER_TYPE). 
+BIND('null' as ?PARENT_UNIQUE_NAME). 
+BIND('null' as ?PARENT_LEVEL). 
+{{{FILTERS}}} 
+} ORDER BY ?CUBE_NAME ?MEASURE_UNIQUE_NAME 
+
