@@ -9,6 +9,13 @@ members of the dimension, we do not need to consider this.
 * Sesame SPARQL adaption:
 ** Picky with empty spaces, added serveral
 ** (COUNT(?variable) as ?variable)
+* xmla-server + xmla4js was quite picky about some non-implemented methods in olap4ld taken over 
+from olap4j/mondrian (e.g., Olap4ldDatabase.getUserName()). Fixed those with workarounds. 
+* We name Catalog and Schema the same due to compatibility reasons with xmla-server/xmla4js
+* Problem: GetCubes() auf dem Schema gibt uns keinerlei Cubes, da das System nicht weiß, woher
+er sie nehmen soll. Daher setzen wir auf getMeasures(Cube), getDimensions(Cube) etc., müssen hier
+jedoch sicherstellen, dass zumindest der Datensatz aufgelöst worden ist. 
+* We have added measureList to CellSet as added metadata.
 
 ==2013-07-03==
 * xml2nx adapted to Sesame SPARQL/XML output with linebreaks
